[package]
name = "flv-keyframes"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
tokio = { version = "0.2.22", features = [ "full" ] }
futures = "0.3.5"
structopt = { version = "0.3.17", features = [ "paw" ] }
paw = "1.0.0"
urlencoding = "1.0.0"
flv_codec = "0.1.0"
bytecodec = "0.4.13"
amf = "0.3.1"
serde = { version = "1.0.115", features = [ "derive" ] }
bincode = "1.3.1"
anyhow = "1.0.32"
bytes = "0.5.6"
