[package]
name = "flv-keyframes"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.0"
tokio = { version = "1.0", features = [ "full" ] }
futures = "0.3.12"
structopt = { version = "0.3.21", features = [ "paw" ] }
paw = "1.0.0"
urlencoding = "1.0.0"
flv_codec = "0.1.0"
bytecodec = "0.4.13"
amf = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3.1"
anyhow = "1.0.32"
bytes = "1.0"
headers = "0.3"
deku = "0.10.0"
